--- a/styles/Questionnaire.module.scss
+++ b/styles/Questionnaire.module.scss
@@ -1,3 +1,5 @@
+@use './utils';
+
 @mixin fullwidth_bg {
     --bg-color: hsl(200 50% 20%);
     box-shadow: 0 0 0 100vmax var(--bg-color);
@@ -13,28 +15,52 @@
     flex-direction: column;
     background-color: var(--gray-6);
     margin: 10px 0;
-    height: 300px;
+    min-height: max-content;
     @include fullwidth_bg;
 
+    form {
+        margin: 10px 0;
+        @media (max-width: 768px) {
+            
+            display: flex;
+            flex-direction: column;
+            text-align: justify;
+            margin-left: 15px;
+        }
+        
+    }
     h2 {
-        font-size: var(--font-size-5);
+        // font-size: var(--font-size-5);
         color: var(--gray-2);
         padding: 1% 0;
+        @include utils.h3-font;
+        text-transform: uppercase;
     }
 
     label {
         color: var(--gray-2);
         margin: 5px 0;
-        font-size: var(--font-size-3);
+        // font-size: var(--font-size-3);
+        @include utils.p-font;
+        position: relative;
     }
-    
+    label::before {
+        content: " \273B";
+        // display: block;
+        position: absolute;
+        left: -20px;
+        top: -1px;
+    }
+
     select {
         color: var(--gray-2);
         border: none;
-        padding: 0 5px;
-        margin: 5px;
+        // padding: 0 5px;
+        margin: 5px 0;
         background-color: var(--bg-color);
-        font-size: var(--font-size-2);
+        // font-size: var(--font-size-2);
+        @include utils.p-font;
+        letter-spacing: normal;
 
     }
 
@@ -52,7 +78,7 @@
 }
 
 .select_wrapper {
-    display: inline-block;
+    // display: inline-block;
 
     select {
         text-align-last: center;
